--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,6 +19,6 @@ built_master_tagged:
   script:
     - echo -n "${DOCKER_PASSWORD}" | docker login -u ${DOCKER_USER} --password-stdin ${REGISTRY}
     - docker build -t ${IMAGE}:${CI_COMMIT_TAG} -f ./Dockerfile .
-    - docker push ${IMAGE} docker logout
+    - docker push ${IMAGE} && docker logout
   only:
    - tags
